...
        android:title="Add" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@android:drawable/btn_star"
        android:title="Favorites" />
    <item
        android:id="@+id/nav_admin_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="Admin" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Profile" />
...
